--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
+    "@angular/router": "^0.2.0",
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.3",
+    "angular-cookies": "^1.5.3",
+    "angular-resource": "^1.5.3",
+    "angular-sanitize": "^1.5.3",
+    "angular-touch": "^1.5.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^2.4.1",
+    "express": "^4.13.3",
     "glob": "^6.0.4",
+    "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
-    "jade": "^1.11.0"
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
