--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,27 @@
 {
   "name": "couchinn",
-  "version": "0.0.1",
+  "description": "",
+  "main": "",
+  "authors": [
+    "Luciano Perez Cerra <luchopcerra@gmail.com>"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/luchopcerra/couchInn",
   "ignore": [
     "**/.*",
     "node_modules",
-    "components"
-  ]
+    "bower_components",
+    "public/components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.5",
+    "angular-cookies": "^1.5.5",
+    "angular-resource": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
+    "angular-touch": "^1.5.5",
+    "angular-route": "^1.5.5"
+  }
 }
