--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "angular-resource": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angular-touch": "^1.5.5",
-    "angular-route": "^1.5.5"
+    "angular-route": "^1.5.5",
+    "angular-material": "^1.0.7",
+    "angular-aria": "^1.5.5"
   }
 }
