--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-touch": "^1.5.5",
     "angular-route": "^1.5.5",
     "angular-material": "^1.0.7",
-    "angular-aria": "^1.5.5"
+    "angular-aria": "^1.5.5",
+    "material-design-icons": "^2.2.3"
   }
 }
