--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-route": "^1.5.5",
     "angular-material": "^1.0.7",
     "angular-aria": "^1.5.5",
-    "material-design-icons": "^2.2.3"
+    "material-design-icons": "^2.2.3",
+    "angular-jwt": "^0.0.9"
   }
 }
