--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.3",
     "glob": "^6.0.4",
+    "jsonwebtoken": "^7.0.0",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
