--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-aria": "^1.5.5",
     "material-design-icons": "^2.2.3",
     "ngstorage": "^0.3.10",
-    "a0-angular-storage": "^0.0.15"
+    "a0-angular-storage": "^0.0.15",
+    "angular-jwt": "^0.0.9"
   }
 }
