install moment and moment-range

--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "material-design-icons": "^2.2.3",
     "ngstorage": "^0.3.10",
     "a0-angular-storage": "^0.0.15",
-    "angular-jwt": "^0.0.9"
+    "angular-jwt": "^0.0.9",
+    "moment": "^2.14.1",
+    "moment-range": "^2.2.0"
   }
 }
