--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "glob": "^6.0.4",
     "jsonwebtoken": "^7.0.0",
     "method-override": "^2.3.0",
+    "moment": "^2.14.1",
+    "moment-range": "^2.2.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
