--- a/bower.json
+++ b/bower.json
@@ -16,20 +16,21 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-animate": "^1.5.5",
-    "angular-cookies": "^1.5.5",
-    "angular-resource": "^1.5.5",
-    "angular-sanitize": "^1.5.5",
-    "angular-touch": "^1.5.5",
-    "angular-route": "^1.5.5",
-    "angular-material": "^1.0.7",
+    "angular": "1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-cookies": "^1.5.8",
+    "angular-resource": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "angular-touch": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "angular-material": "^1.1.0",
     "angular-aria": "^1.5.5",
     "material-design-icons": "^2.2.3",
     "ngstorage": "^0.3.10",
     "a0-angular-storage": "^0.0.15",
     "angular-jwt": "^0.0.9",
     "moment": "^2.14.1",
-    "moment-range": "^2.2.0"
+    "moment-range": "^2.2.0",
+    "angular-messages": "^1.5.8"
   }
 }
