--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-jwt": "^0.0.9",
     "moment": "^2.14.1",
     "moment-range": "^2.2.0",
-    "angular-messages": "^1.5.8"
+    "angular-messages": "^1.5.8",
+    "angular-material-data-table": "^0.10.9"
   }
 }
